Fix client credentials for subjects and docker setup